#table-rendering-place is fixed in place and now has it's own scrollbar, removed sort() JS func from table

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
   --dark-tone-40: #ABACBE;
   --dark-tone-20: #BCBCC6;
   --dark-tone-8: #EEEEF2;
-  --accent-tone-100: #644DED;
+  --accent-tone-100: #7F63F4;
   --light-theme: #F9F9FC;
   --accent-tone-50: #AD9FFF;
   --accent-opac-8: #654ded14;
@@ -41,10 +41,17 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  position: sticky;
+  top: 0;
+  background-color: #fff;
 }
 #table-header-bottom {
   display: flex;
   justify-content: space-between;
+  position: sticky;
+  top: 64px;
+  background-color: #fff;
+  box-shadow: 0px 10px 15px -20px;
 }
 #table-title {
   font-size: 18px;
@@ -53,9 +60,12 @@ body {
 #table-rendering-place {
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  margin: 20px 20px 0px 20px;
   background-color: #FFF;
   filter: drop-shadow(1.5px 2.6px 10px rgba(119, 119, 119, 0.10));
+  height: 81vh;
+  overflow: auto;
+  scrollbar-width: thin;
 }
 #table-buttons {
   display: flex;
@@ -104,7 +114,6 @@ th, td {
 }
 
 th {
-  cursor: pointer;
   text-align: center;
 }
 
@@ -176,13 +185,13 @@ th {
   transition: 0.5s ease;
 }
 .bc-element:hover {
-  color: #7F63F4;
+  color: var(--accent-tone-100);
 }
 .bc-separator {
   cursor: default;
 }
 .active {
-  color: #7F63F4;
+  color: var(--accent-tone-100);
 }
 #breadcrumbs-container {
   display: flex;
@@ -190,11 +199,11 @@ th {
   align-items: center;
   padding: 10px 20px;
   background-color: #8063f41a;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   height: 60px;
 }
 #page-title {
-  color: #7F63F4;
+  color: var(--accent-tone-100);
   font-weight: 500;
   font-size: 26px;
 }
@@ -413,8 +422,11 @@ hr {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #7F63F4;
+  background-color: var(--accent-tone-100);
   height: 100px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 .menu-name {
   font-size: 26px;
